--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
         "test:watch": "jest --watch"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "jest-environment-jsdom": "^29.7.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
+        "react-redux": "^8.1.2",
         "vite-plugin-svgr": "^3.2.0"
     },
     "devDependencies": {
