--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
+        "axios": "^1.5.0",
         "jest-environment-jsdom": "^29.7.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.3",
         "react-redux": "^8.1.2",
+        "react-router-dom": "^6.16.0",
         "vite-plugin-svgr": "^3.2.0"
     },
     "devDependencies": {
