[ADD] handle login client side

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
-    "types": ["node"]
+    "types": ["node"],
+    "strict": true
   },
   "include": ["src/**/*"]
 }
