--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/index.js",
-    "server": "concurrently \"tsc -w\" \"nodemon dist/index\""
+    "server": "concurrently \"tsc -w\" \"nodemon dist/index\"",
+    "generate-types": "tsc -p tsconfig-export.json && cp ./dist/export-api-types.d.ts ../client/src//apis/types.d.ts"
   },
   "keywords": [],
   "author": "",
