--- a/server/package.json
+++ b/server/package.json
@@ -5,21 +5,28 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "build": "tsc",
     "start": "node dist/index.js",
-    "server": "concurrently \"tsc -w\" \"nodemon dist/index\"",
+    "server": "concurrently \"tsc -w\" \"nodemon dist/src/index\"",
     "generate-types": "tsc -p tsconfig-export.json && cp ./dist/export-api-types.d.ts ../client/src/apis/types.d.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.2",
+    "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.7.1",
+    "@types/supertest": "^2.0.13",
     "concurrently": "^8.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
