--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,8 +5,9 @@
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
-    "types": ["node"],
-    "strict": true
+    "types": ["jest", "node"],
+    "strict": true,
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "__test__"]
 }
