--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.1",
     "@types/supertest": "^2.0.13",
+    "@types/ws": "^8.5.6",
     "concurrently": "^8.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
@@ -34,7 +35,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "ws": "^8.14.2"
   }
 }
