--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
+    "emoji-picker-react": "^4.6.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
